--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -42,6 +42,7 @@
   &__info {
     width: 43%;
     padding-top: 17px;
+    padding-left: 5px;
     box-sizing: border-box;
 
     @media (max-width: $desktop) {
