--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -17,7 +17,7 @@
 
   &__info {
     width: 50%;
-    padding: 65px 40px 0 0;
+    padding: 68px 40px 0 20px;
     box-sizing: border-box;
 
     @media (max-width: $desktop) {
@@ -32,7 +32,7 @@
 
   &__pic {
     box-sizing: border-box;
-    width: 48%;
+    width: 47%;
 
     @media (max-width: $table) {
       width: auto;
@@ -60,6 +60,7 @@
       font-size: 28px;
       line-height: 150%;
       font-weight: 600;
+      letter-spacing: 0.05em;
       max-width: 100%;
 
       @media (max-width: $desktop) {
