--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -43,6 +43,7 @@
     font-size: 40px;
     line-height: 150%;
     font-weight: bold;
+    letter-spacing: 0.07em;
     text-align: left;
 
     @media (max-width: $desktop) {
@@ -93,8 +94,8 @@
 
   &__info {
     width: 50%;
-    padding-left: 60px;
-    margin-top: -10px;
+    padding-left: 81px;
+    margin-top: -7px;
     box-sizing: border-box;
 
     @media (max-width: $desktop) {
