--- a/source/sass/blocks/nearest-cruises.scss
+++ b/source/sass/blocks/nearest-cruises.scss
@@ -50,6 +50,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    padding: 0 9px 0 29px;
     width: 100%;
     box-sizing: border-box;
     overflow: hidden;
