--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -2,7 +2,7 @@
   padding: 110px 0 117px;
 
   @media (max-width: $desktop) {
-    padding: 90px 0 60px;
+    padding: 90px 0 58px;
   }
 
   @media (max-width: $table) {
@@ -21,12 +21,16 @@
     box-sizing: border-box;
 
     @media (max-width: $desktop) {
-      width: 52%;
+      width: 53%;
       padding: 0;
+      padding-left: 18px;
+      padding-top: 2px;
     }
 
     @media (max-width: $table) {
       width: 100%;
+      padding-top: 0;
+      padding-left: 10px;
     }
   }
 
