--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -14,6 +14,10 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+
+    @media (max-width: $table) {
+      padding: 0 20px;
+    }
   }
 
   &__map {
@@ -46,7 +50,7 @@
     box-sizing: border-box;
 
     @media (max-width: $desktop) {
-      width: 48%;
+      width: 47%;
       padding-top: 13px;
     }
 
@@ -58,7 +62,7 @@
 
   & p {
     margin: 0 0 29px 0;
-    font-family: $mainFont-2;
+    font-family: $mainFontMedium;
     font-size: 18px;
     line-height: 150%;
     font-weight: 500;
