--- a/source/sass/blocks/nearest-cruises.scss
+++ b/source/sass/blocks/nearest-cruises.scss
@@ -43,6 +43,7 @@
       max-width: 100%;
       font-size: 24px;
       line-height: 140%;
+      letter-spacing: 0.07em;
     }
   }
 
@@ -54,6 +55,15 @@
     width: 100%;
     box-sizing: border-box;
     overflow: hidden;
+
+    @media (max-width: $desktop) {
+      padding: 0;
+      padding-left: 10px;
+    }
+
+    @media (max-width: $table) {
+      padding: 0;
+    }
   }
 
   &__item {
