--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,17 +1,17 @@
 @font-face {
   font-family: $mainFont;
   font-display: auto;
-  src: url("../fonts/montserratlight.woff2") format("woff2"),
-    url("../fonts/montserratlight.woff") format("woff");
+  src: url("../fonts/montserrat.woff2") format("woff2"),
+    url("../fonts/montserrat.woff") format("woff");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
-  font-family: $mainFont-2;
+  font-family: $mainFontMedium;
   font-display: auto;
-  src: url("../fonts/Montserrat.woff2") format("woff2"),
-    url("../fonts/Montserrat.woff") format("woff");
+  src: url("../fonts/montserrat-medium.woff2") format("woff2"),
+    url("../fonts/montserrat-medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
@@ -19,8 +19,8 @@
 @font-face {
   font-family: $mainFontBold;
   font-display: auto;
-  src: url("../fonts/Montserratbold.woff2") format("woff2"),
-    url("../fonts/Montserratbold.woff") format("woff");
-  font-weight: 600;
+  src: url("../fonts/montserratbold.woff2") format("woff2"),
+    url("../fonts/montserratbold.woff") format("woff");
+  font-weight: 700;
   font-style: normal;
 }
