--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -3,8 +3,9 @@
     display: none;
     z-index: 5;
     position: absolute;
-    top: 21px;
-    right: 15px;
+    top: 22px;
+    right: 11px;
+    padding: 0;
     height: 27px;
 
     border: none;
