--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -88,6 +88,7 @@
       padding-right: 18px;
       margin-bottom: 35px;
       font-size: 16px;
+      font-weight: normal;
 
       @media (max-width: $desktop) {
         padding-right: 25px;
