--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -77,9 +77,10 @@
     max-width: 343px;
     margin: 0 auto 0 0;
     text-align: left;
+    font-weight: normal;
 
     @media (max-width: $desktop) {
-      max-width: 340px;
+      max-width: 345px;
       margin: 0 auto;
       font-size: 18px;
       line-height: 150%;
