--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -30,7 +30,7 @@
 
   &__container {
     & h2 {
-      margin: 0 auto 50px 15px;
+      margin: 0 auto 50px;
       font-family: $mainFont;
       font-size: 28px;
       line-height: 150%;
@@ -40,7 +40,6 @@
 
       @media (max-width: $desktop) {
         margin-bottom: 50px;
-        margin-left: 12px;
         font-size: 26px;
       }
 
@@ -57,17 +56,9 @@
     flex-wrap: wrap;
     justify-content: flex-start;
 
-    padding: 0 0 0 20px;
+    padding: 0;
     margin: 0;
     list-style: none;
-
-    @media (max-width: $desktop) {
-      padding: 0 0 0 15px;
-    }
-
-    @media (max-width: $table) {
-      padding: 0;
-    }
   }
 
   &__item {
@@ -152,7 +143,7 @@
 
   &__icon {
     height: 32px;
-    margin-bottom: 13px;
+    margin-bottom: 12px;
 
     @media (max-width: $desktop) {
       margin-bottom: 11px;
