--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -14,6 +14,10 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+
+    @media (max-width: $table) {
+      padding: 0 16px;
+    }
   }
 
   &__map {
@@ -41,13 +45,12 @@
 
   &__info {
     width: 43%;
-    padding-top: 17px;
-    padding-left: 5px;
+    padding-top: 15px;
     box-sizing: border-box;
 
     @media (max-width: $desktop) {
-      width: 47%;
-      padding-top: 13px;
+      width: 48%;
+      padding-top: 9px;
     }
 
     @media (max-width: $table) {
@@ -88,6 +91,7 @@
 
     @media (max-width: $desktop) {
       line-height: 130%;
+      margin-bottom: 23px;
     }
 
     @media (max-width: $table) {
